@@ -150,6 +150,7 @@
     <Compile Include="Power\WndProcProxy.cs" />
     <Compile Include="Process\ConfigConstants.cs" />
     <Compile Include="Process\Events\HandlingStateChangeEventArgs.cs" />
+    <Compile Include="Process\Events\LoaderEvent.cs" />
     <Compile Include="Process\Legacy.cs" />
     <Compile Include="Process\LoadInfo.cs" />
     <Compile Include="Process\Options.cs" />
@@ -231,6 +232,9 @@
     </Compile>
     <Compile Include="Events\RunstateException.cs" />
     <Compile Include="SelfMaintenance.cs" />
+    <Compile Include="UI\LoaderDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UI\MessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
