@@ -5,6 +5,7 @@ Comprehensive changes can be found in Git change history:
 ## [0.13...]
 ### 2019-07-27
 	Fixed: Foreground hang detector was not updating what program was last hung.
+	Added: Experimental loader display UI. Currently unusable. Early experimentation discouraging.
 ### 2019-07-18
 	Internal: Simplified/unified some parts of the code to reduce repeating.
 	Removed: Support for all deprecated settings in the .ini files.
